--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
+    "react-modal": "^3.11.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-tabs": "^3.1.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
@@ -66,7 +68,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "rekit": {
     "devPort": 6075,
@@ -115,6 +119,10 @@
   },
   "description": "vibe-sample-app created by Rekit.",
   "devDependencies": {
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
     "rekit-plugin-redux-saga": "^1.0.0"
   }
 }
