--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-hook-form": "^5.2.0",
     "react-hot-loader": "^4.0.0",
     "react-modal": "^3.11.2",
     "react-redux": "^5.0.7",
@@ -63,7 +64,8 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
