--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -50,6 +51,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "5.0.0-alpha.9",
+    "react-switch": "^5.0.1",
     "react-tabs": "^3.1.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -126,6 +128,7 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-scss": "^1.0.2",
     "@storybook/react": "^5.3.18",
+    "@svgr/webpack": "^5.3.0",
     "rekit-plugin-redux-saga": "^1.0.0"
   }
 }
